[gd_scene load_steps=3 format=3 uid="uid://cnurxmck8x2nv"]

[ext_resource type="Script" path="res://Inventory/inventory_ui.gd" id="1_f8nx2"]
[ext_resource type="PackedScene" uid="uid://c7t4h4vmmoc1q" path="res://Inventory/inventory_grid_container.tscn" id="2_6we01"]

[node name="InventoryUi" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_f8nx2")

[node name="InventoryCanvas" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="Background" type="ColorRect" parent="InventoryCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.448371, 0.284249, 0.191908, 1)
metadata/_edit_use_anchors_ = true

[node name="ButtonGridContainer" type="GridContainer" parent="InventoryCanvas"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -36.66
offset_right = 103.0
offset_bottom = -5.65997
grow_horizontal = 2
grow_vertical = 0
columns = 5

[node name="RecipeBookButton" type="Button" parent="InventoryCanvas/ButtonGridContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../CloseButton")
focus_neighbor_right = NodePath("../ItemList")
focus_neighbor_bottom = NodePath("../FeedButton")
text = "Recipe Book"
metadata/_edit_use_anchors_ = true

[node name="FeedButton" type="Button" parent="InventoryCanvas/ButtonGridContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../RecipeBookButton")
focus_neighbor_bottom = NodePath("../CloseButton")
text = "Feed"
metadata/_edit_use_anchors_ = true

[node name="CloseButton" type="Button" parent="InventoryCanvas/ButtonGridContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../FeedButton")
focus_neighbor_bottom = NodePath("../RecipeBookButton")
text = "Close"
metadata/_edit_use_anchors_ = true

[node name="InventoryGridContainer" parent="InventoryCanvas" instance=ExtResource("2_6we01")]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.03
anchor_right = 0.5
anchor_bottom = 0.1
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 608.0
grow_horizontal = 2
mouse_filter = 2
columns = 14
width = 14
height = 7

[connection signal="pressed" from="InventoryCanvas/ButtonGridContainer/RecipeBookButton" to="." method="_on_recipe_book_button_pressed"]
[connection signal="pressed" from="InventoryCanvas/ButtonGridContainer/FeedButton" to="." method="_on_feed_button_pressed"]
[connection signal="pressed" from="InventoryCanvas/ButtonGridContainer/CloseButton" to="." method="_on_close_button_pressed"]
